SERVER-11994 Fix logic error in processing of text search negated terms